--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <a href="https://limzhongrui.github.io/week2/">visit week2 link</a>
     <br>
-    <a href="https://limzhongrui.github.io/week3/">visit week3 apple link</a>
+    <a href="https://limzhongrui.github.io/week3/apple">visit week3 apple link</a>
 
 
 </body>
