--- a/week3/exercise2/index.html
+++ b/week3/exercise2/index.html
@@ -34,22 +34,20 @@
       <div class="px-4 py-5 my-5 text-center">
         <img
           class="d-block mx-auto mb-4"
-          src="images/bootstrap-logo.svg"
+          src="images/logo.png"
           alt=""
-          width="72"
+          width=:
           height="57"
         />
-        <h1 class="display-5 fw-bold">Centered hero</h1>
+        <h1 class="display-5 fw-bold">Lim Zhong Rui</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">
-            Change to your self introduction on this paragraph.
-            Bootstrap, the world’s most popular front-end open source toolkit,
-            featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.
+            hihihihihi self introduction
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3">
-              Button 1
+              Facebook <img src="images/facebooklogo.png" width="30">
+              <a href="https://www.facebook.com/" target="_blank"></a>
             </button>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
               Button 2
