--- a/week3/exercise2/index.html
+++ b/week3/exercise2/index.html
@@ -73,13 +73,16 @@
           ">
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4 fw-bold lh-1">
-            Border hero
+            Favorite Movie
           </h1>
           <p class="lead">
-            Quickly design and customize responsive mobile-first sites with
-            Bootstrap, the world’s most popular front-end open source toolkit,
-            featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.
+            <ul>
+              <li>Coffee</li>
+              <li>Tea</li>
+              <li>Coffee</li>
+              <li>Tea</li>
+              <li>Milk</li>
+          </ul>
           </p>
           <div class="
                 d-grid
@@ -88,13 +91,15 @@
                 justify-content-md-start
                 mb-4 mb-lg-3
               ">
-            <button type="button" class="btn btn-danger btn-lg px-4 me-md-2 fw-bold">
-              Button 3
-            </button>
+            <a href="https://github.com/LimZhongRui" target="_blank">
+              <button type="button" class="btn btn-danger btn-lg px-4 me-md-2 fw-bold">
+                My Github <img src="images/githublogo.png" width="30">
+              </button>
+            </a>
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-          <img class="rounded-lg-3" src="images/bootstrap-docs.png" alt="" width="720" />
+          <img class="rounded-lg-3" src="../../image/rui.jpeg" alt="" width="720" />
         </div>
       </div>
     </div>
