--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="https://limzhongrui.github.io/week2/">visit week2 link</a>
     <br>
     <a href="https://limzhongrui.github.io/week3/apple">visit week3 apple link</a>
+    <br>
+    <a href="https://limzhongrui.github.io/week3/exercise2">visit week3 exercise2 link</a>
 
 
 </body>
