--- a/week3/exercise2/index.html
+++ b/week3/exercise2/index.html
@@ -34,20 +34,20 @@
     <h1 class="visually-hidden">Heroes examples</h1>
 
     <div class="px-4 py-5 my-5 text-center">
-      <img class="d-block mx-auto mb-4" src="images/logo.png" alt="" width=: height="57" />
+      <img class="d-block mx-auto mb-4" src="images/logo.png" alt="" width: height="57" />
       <h1 class="display-5 fw-bold">Lim Zhong Rui</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
           hihihihihi self introduction
         </p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a href="https://www.facebook.com" target="_blank">
+          <a href="https://www.facebook.com/zhongrui.lim.7/" target="_blank">
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3">
               Facebook <img src="images/facebooklogo.png" width="30">
             </button>
           </a>
 
-          <a href="https://www.instagram.com" target="_blank">
+          <a href="https://www.instagram.com/zhongrui0712/" target="_blank">
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
               Instagram <img src="images/instagramlogo.png" width="30">
             </button>
