--- a/week3/exercise2/index.html
+++ b/week3/exercise2/index.html
@@ -38,7 +38,7 @@
       <h1 class="display-5 fw-bold">Lim Zhong Rui</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
-          hihihihihi self introduction
+          I come from N.Sembilan, born at 07-12-2001, I have 5 siblings. 
         </p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <a href="https://www.facebook.com/zhongrui.lim.7/" target="_blank">
@@ -77,11 +77,11 @@
           </h1>
           <p class="lead">
             <ul>
-              <li>Coffee</li>
-              <li>Tea</li>
-              <li>Coffee</li>
-              <li>Tea</li>
-              <li>Milk</li>
+              <li>The Pursuit of Happyness (当幸福来敲门)</li>
+              <li>Fast and Furious Series</li>
+              <li>Marvel</li>
+              <li>The Blind Side</li>
+              <li>Blood Diamond (血钻)</li>
           </ul>
           </p>
           <div class="
