change hw1 box2

--- a/week3/homework/homework1.html
+++ b/week3/homework/homework1.html
@@ -78,7 +78,7 @@
                 <p>Furniture, decor, and beyond</p>
             </h1>
         </div>
-        <div id="box2" class="box">
+        <div id="box2" class="box2">
             <div><img src="../exercise2/images/hw1-2.png" /> </div>
         </div>
     </div>
