--- a/week3/homework/homework2.html
+++ b/week3/homework/homework2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Homework 1</title>
+    <title>Homework 2</title>
     <style>
         body {
             background-color: rgb(255, 255, 255);
@@ -55,9 +55,7 @@
         }
 
         p {
-
             font-size: 2vw;
-
         }
     </style>
     <!-- this is HTML Comment 
@@ -70,7 +68,12 @@
 </head>
 
 <body>
+    <div class="titlebox">
+        <h1>CUSTOMER REVIEW</h1>
+    </div>
+<div>
 
+</div>
     <div class="container">
         <div id="box1" class="titlebox">
             <h1>MERLAND
@@ -78,7 +81,7 @@
                 <p>Furniture, decor, and beyond</p>
             </h1>
         </div>
-        <div id="box2" class="box">
+        <div id="box2" class="box2">
             <div><img src="../exercise2/images/hw1-2.png" /> </div>
         </div>
     </div>
