--- a/week3/homework/homework2.html
+++ b/week3/homework/homework2.html
@@ -8,7 +8,7 @@
             background-color: rgb(255, 255, 255);
             font-family: 'Lato', sans-serif;
             /* If Lato not available, use sans-serif */
-            font-size: 3vw;
+            font-size: 1.5vw;
             /* vw is the size unit, it changes based on your current screen size. The bigger screen the font will be bigger and vice versa. */
         }
 
@@ -43,18 +43,26 @@
         }
 
         #box2 {
-            text-align: right;
+            text-align: center;
             background-image: url("images/unsplash.jpg");
             background-size: cover;
             background-position: center center;
         }
 
         h1 {
-            padding: 10px;
+            padding: 1px;
+            width: max-content;
+            font-size: 5vw;
             border: 8px black solid;
+            margin: 0 auto;
+        }
+
+        h2 {
+            text-align: center;
         }
 
         p {
+            text-align: center;
             font-size: 2vw;
         }
     </style>
@@ -71,18 +79,59 @@
     <div class="titlebox">
         <h1>CUSTOMER REVIEW</h1>
     </div>
-<div>
-
-</div>
     <div class="container">
-        <div id="box1" class="titlebox">
-            <h1>MERLAND
-                FURNITURE
-                <p>Furniture, decor, and beyond</p>
-            </h1>
+        <div id="box1" class="box2">
+            <div>
+                <p>
+                    <img src="../exercise2/images/hw2-1.png" />
+                </p>
+            </div>
+            <titlebox>
+                <h2>
+                    Murielle Blake
+                </h2>
+
+                <p>
+                    Testimonials are short quotes from people who love your brand. It's a great way to convince
+                    customers to try your services.
+                </p>
+            </titlebox>
         </div>
+
         <div id="box2" class="box2">
-            <div><img src="../exercise2/images/hw1-2.png" /> </div>
+            <div>
+                <p>
+                    <img src="../exercise2/images/hw2-2.png" />
+                </p>
+            </div>
+            <titlebox>
+                <h2>
+                    Inna Tran
+                </h2>
+
+                <p>
+                    Testimonials are short quotes from people who love your brand. It's a great way to convince
+                    customers to try your services.
+                </p>
+            </titlebox>
+        </div>
+
+        <div id="box3" class="box2">
+            <div>
+                <p>
+                    <img src="../exercise2/images/hw2-3.png" />
+                </p>
+            </div>
+            <titlebox>
+                <h2>
+                    Clycle Meily
+                </h2>
+
+                <p>
+                    Testimonials are short quotes from people who love your brand. It's a great way to convince
+                    customers to try your services.
+                </p>
+            </titlebox>
         </div>
     </div>
 </body>
