--- a/week3/homework/homework3.html
+++ b/week3/homework/homework3.html
@@ -55,8 +55,9 @@
         }
 
         p {
-            font-size: 2vw;
+            font-size: 3vw;
         }
+
     </style>
     <!-- this is HTML Comment 
          The 2 lines below is to install Google Fonts. 
@@ -71,15 +72,25 @@
 
     <div class="container">
 
-        <div id="box1" class="box2">
+        <div id="box1" class="box">
             <div><img src="../exercise2/images/hw3-1.png" /> </div>
         </div>
 
         <div id="box2" class="titlebox">
             <h1>CONNECT WITH US
-                <p>Furniture, decor, and beyond</p>
+                <br>
+                <h2>Maling Address</h2>
+                <p>123anywhere ST., AnyCity, State, Contry 12345</p>
+
+                <h2>Email Address</h2>
+                <p>hello@reallygreatsite.com</p>
+
+                <h2>Phone Number</h2>
+                <p>(123) 456 7890</p>
+                
             </h1>
         </div>
+
 
     </div>
 </body>
