add c;ass p1 (done)

--- a/week3/homework/homework3.html
+++ b/week3/homework/homework3.html
@@ -55,7 +55,12 @@
         }
 
         p {
-            font-size: 3vw;
+            font-size: 2vw;
+            font-weight: lighter;
+        }
+
+        .p1{
+            font-weight: bolder;
         }
 
     </style>
@@ -79,13 +84,13 @@
         <div id="box2" class="titlebox">
             <h1>CONNECT WITH US
                 <br>
-                <h2>Maling Address</h2>
+                <p class="p1">Maling Address</p>
                 <p>123anywhere ST., AnyCity, State, Contry 12345</p>
 
-                <h2>Email Address</h2>
+                <p class="p1">Email Address</p>
                 <p>hello@reallygreatsite.com</p>
 
-                <h2>Phone Number</h2>
+                <p class="p1">Phone Number</p>
                 <p>(123) 456 7890</p>
                 
             </h1>
