--- a/week3/homework/homework1.html
+++ b/week3/homework/homework1.html
@@ -43,8 +43,8 @@
         }
 
         #box2 {
-            text-align: right;
-            background-image: url("images/unsplash.jpg");
+            text-align: center;
+            background-image: url("../exercise2/images/hw1-2.png");
             background-size: cover;
             background-position: center center;
         }
@@ -55,9 +55,7 @@
         }
 
         p {
-
             font-size: 2vw;
-
         }
     </style>
     <!-- this is HTML Comment 
@@ -72,16 +70,20 @@
 <body>
 
     <div class="container">
+
         <div id="box1" class="titlebox">
             <h1>MERLAND
                 FURNITURE
-                <p>Furniture, decor, and beyond</p>
+                <p font-size:>Furniture, decor, and beyond</p>
             </h1>
         </div>
-        <div id="box2" class="box2">
-            <div><img src="../exercise2/images/hw1-2.png" /> </div>
+
+        <div id="box2" class="box">
+            <div ><p>halo!!!</p></div>
         </div>
+
     </div>
+
 </body>
 
 </html>
