--- a/week3/homework/homework2.html
+++ b/week3/homework/homework2.html
@@ -10,6 +10,8 @@
             /* If Lato not available, use sans-serif */
             font-size: 1.5vw;
             /* vw is the size unit, it changes based on your current screen size. The bigger screen the font will be bigger and vice versa. */
+            margin: 90px;
+            ;
         }
 
         .titlebox {
@@ -28,9 +30,8 @@
 
         .container .box {
             /* All the .box under .container */
-            width: 50%;
+            width: 33.33%;
             /* Each column would takes up 50%, so equally sharing spaces left and right */
-
             display: flex;
             /* refer here to get more details about flex usage: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
             align-items: center;
@@ -63,7 +64,7 @@
 
         p {
             text-align: center;
-            font-size: 2vw;
+            font-size: 1.5vw;
         }
     </style>
     <!-- this is HTML Comment 
@@ -80,59 +81,59 @@
         <h1>CUSTOMER REVIEW</h1>
     </div>
     <div class="container">
-        <div id="box1" class="box2">
+        <div id="box1" class="box">
             <div>
                 <p>
                     <img src="../exercise2/images/hw2-1.png" />
                 </p>
+                <titlebox>
+                    <h2>
+                        Murielle Blake
+                    </h2>
+                    <p>
+                        Testimonials are short quotes from people who love your brand. It's a great way to convince
+                        customers to try your services.
+                    </p>
+                </titlebox>
             </div>
-            <titlebox>
-                <h2>
-                    Murielle Blake
-                </h2>
-
-                <p>
-                    Testimonials are short quotes from people who love your brand. It's a great way to convince
-                    customers to try your services.
-                </p>
-            </titlebox>
         </div>
 
-        <div id="box2" class="box2">
+        <div id="box2" class="box">
             <div>
                 <p>
                     <img src="../exercise2/images/hw2-2.png" />
                 </p>
+                <titlebox>
+                    <h2>
+                        Inna Tran
+                    </h2>
+                    <p>
+                        Testimonials are short quotes from people who love your brand. It's a great way to convince
+                        customers to try your services.
+                    </p>
+                </titlebox>
             </div>
-            <titlebox>
-                <h2>
-                    Inna Tran
-                </h2>
-
-                <p>
-                    Testimonials are short quotes from people who love your brand. It's a great way to convince
-                    customers to try your services.
-                </p>
-            </titlebox>
         </div>
 
-        <div id="box3" class="box2">
+        <div id="box3" class="box">
             <div>
                 <p>
                     <img src="../exercise2/images/hw2-3.png" />
                 </p>
-            </div>
-            <titlebox>
-                <h2>
-                    Clycle Meily
-                </h2>
 
-                <p>
-                    Testimonials are short quotes from people who love your brand. It's a great way to convince
-                    customers to try your services.
-                </p>
-            </titlebox>
+                <titlebox>
+                    <h2>
+                        Clycle Meily
+                    </h2>
+
+                    <p>
+                        Testimonials are short quotes from people who love your brand. It's a great way to convince
+                        customers to try your services.
+                    </p>
+                </titlebox>
+            </div>
         </div>
+        
     </div>
 </body>
 
