change font family

--- a/week3/homework/homework3.html
+++ b/week3/homework/homework3.html
@@ -6,10 +6,12 @@
     <style>
         body {
             background-color: rgb(255, 255, 255);
-            font-family: 'Lato', sans-serif;
+            font-family: 'Lato', ;
             /* If Lato not available, use sans-serif */
             font-size: 2vw;
             /* vw is the size unit, it changes based on your current screen size. The bigger screen the font will be bigger and vice versa. */
+            margin: 80px ;
+
         }
 
         .titlebox {
@@ -59,10 +61,9 @@
             font-weight: lighter;
         }
 
-        .p1{
+        .p1 {
             font-weight: bolder;
         }
-
     </style>
     <!-- this is HTML Comment 
          The 2 lines below is to install Google Fonts. 
@@ -92,7 +93,7 @@
 
                 <p class="p1">Phone Number</p>
                 <p>(123) 456 7890</p>
-                
+
             </h1>
         </div>
 
