--- a/week3/homework/homework5.html
+++ b/week3/homework/homework5.html
@@ -7,7 +7,7 @@
         body {
             color: antiquewhite;
             background-color: rgb(0, 0, 0);
-            font-family: 'Lato', sans-serif;
+            font-family: 'Lato', ;
             /* If Lato not available, use sans-serif */
             font-size: 2vw;
             /* vw is the size unit, it changes based on your current screen size. The bigger screen the font will be bigger and vice versa. */
