--- a/week3/homework/homework1.html
+++ b/week3/homework/homework1.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-color: rgb(255, 255, 255);
-            font-family: 'Lato', sans-serif;
+            font-family: 'Lato', ;
             /* If Lato not available, use sans-serif */
             font-size: 3vw;
             /* vw is the size unit, it changes based on your current screen size. The bigger screen the font will be bigger and vice versa. */
