--- a/week3/homework/homework4.html
+++ b/week3/homework/homework4.html
@@ -11,6 +11,7 @@
             /* If Lato not available, use sans-serif */
             font-size: 2vw;
             /* vw is the size unit, it changes based on your current screen size. The bigger screen the font will be bigger and vice versa. */
+            margin: 100px;
         }
 
         .titlebox {
@@ -31,12 +32,10 @@
             /* All the .box under .container */
             width: 50%;
             /* Each column would takes up 50%, so equally sharing spaces left and right */
-
             display: flex;
             /* refer here to get more details about flex usage: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
             align-items: center;
             /* vertically center */
-
             text-align: center;
             border: 1px rgb(0, 0, 0) solid;
             border-left-color: rgb(255, 255, 255);
@@ -46,7 +45,6 @@
         .box div {
             /* All the div under .box */
             width: 100%;
-
         }
 
         #box2 {
@@ -56,24 +54,15 @@
             background-position: center center;
             border: 1px rgb(0, 0, 0) solid;
             border-right-color: rgb(255, 255, 255);
-
-
-
         }
 
         h1 {
             padding: 10px;
-
-            
         }
 
         p {
             font-size: 2vw;
             font-weight: lighter;
-        }
-
-        .p1 {
-            font-weight: bolder;
         }
     </style>
     <!-- this is HTML Comment 
@@ -90,17 +79,22 @@
     <div class="container">
 
         <div id="box1" class="box">
-            <h1>Who <i>We</i> Are
-                <br>
-                <p>Mintmade Online offers a well-curated <br> range of fachsion items for men and <br>
-                    women.<br><br>
-                    We aim to provide an enjoyable shopping <br>experience for all our customers.
-                </p>
-            </h1>
+            <div>
+                <h1>Who <i>We</i> Are
+                    <br>
+                    <p>Mintmade Online offers a well-curated <br> range of fachsion items for men and <br>
+                        women.<br><br>
+                        We aim to provide an enjoyable shopping <br>experience for all our customers.
+                    </p>
+                </h1>
+            </div>
         </div>
 
-        <div id="box2" class="box2">
-            <div><img src="../exercise2/images/hw4-1.png" /> </div>
+        <div id="box2" class="box">
+            <div>
+                <div><img src="../exercise2/images/hw4-1.png" /> </div>
+            </div>
+
         </div>
 
 
