--- a/index.html
+++ b/index.html
@@ -2,7 +2,35 @@
 <html>
 
 <head>
-    <title>introduction</title>
+    <title>Introduction</title>
+    <style>
+        body {
+            background-color: rgb(233, 189, 136);
+        }
+
+        .button {
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+
+        .button1 {
+            background-color: white;
+            color: black;
+            border: 2px solid #ff0000;
+        }
+
+        .button1:hover {
+            background-color: #ee0000;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -26,7 +54,13 @@
 
 
     </ul>
-    
+    <a href="https://limzhongrui.github.io/week2/" target="_blank">
+        <button class="button button1">week2 </button>
+    </a>
+
+    <a href="https://limzhongrui.github.io/week3/welcome.html" target="_blank">
+        <button class="button button1">week3 </button>
+    </a>
 
 </body>
 
