--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             background-color: #ee0000;
             color: white;
         }
+
+        hr {
+            background-color: gray;
+            height: 6px;
+        }
     </style>
 </head>
 
@@ -40,20 +45,8 @@
     </p>
     <h1 style="text-align:center;">Name: Lim Zhong Rui</h1>
     <h1 style="text-align:center;">Email: limzhongrui1207@e.newera.edu.my</h1>
-
-    <ul>
-        <li>
-            <a href="https://limzhongrui.github.io/week2/">visit week2 link</a>
-        </li>
-        <li>
-            <a href="https://limzhongrui.github.io/week3/apple">visit week3 apple link</a>
-        </li>
-        <li>
-            <a href="https://limzhongrui.github.io/week3/exercise2">visit week3 exercise2 link</a>
-        </li>
-
-
-    </ul>
+    <hr>
+    
     <a href="https://limzhongrui.github.io/week2/" target="_blank">
         <button class="button button1">week2 </button>
     </a>
