--- a/week3/welcome.html
+++ b/week3/welcome.html
@@ -47,37 +47,37 @@
 
     <hr>
 
-    <a href="https://limzhongrui.github.io/week3/apple" target="_blank">
+    <a href="https://limzhongrui.github.io/week3/apple" >
         <button class="button button1">Apple <img src="../image/apple.png" width="20">
         </button>
     </a>
 
-    <a href="https://limzhongrui.github.io/week3/exercise2/" target="_blank">
+    <a href="https://limzhongrui.github.io/week3/exercise2/" >
         <button class="button button1">Exercise2
         </button>
     </a>
 
-    <a href="https://limzhongrui.github.io/week3/homework/homework1" target="_blank">
+    <a href="https://limzhongrui.github.io/week3/homework/homework1" >
         <button class="button button1">Homework 1
         </button>
     </a>
 
-    <a href="https://limzhongrui.github.io/week3/homework/homework2" target="_blank">
+    <a href="https://limzhongrui.github.io/week3/homework/homework2" >
         <button class="button button1">Homework 2
         </button>
     </a>
 
-    <a href="https://limzhongrui.github.io/week3/homework/homework3" target="_blank">
+    <a href="https://limzhongrui.github.io/week3/homework/homework3" >
         <button class="button button1">Homework 3
         </button>
     </a>
 
-    <a href="https://limzhongrui.github.io/week3/homework/homework4" target="_blank">
+    <a href="https://limzhongrui.github.io/week3/homework/homework4" >
         <button class="button button1">Homework 4
         </button>
     </a>
 
-    <a href="https://limzhongrui.github.io/week3/homework/homework5" target="_blank">
+    <a href="https://limzhongrui.github.io/week3/homework/homework5" >
         <button class="button button1">Homework 5
         </button>
     </a>
