week5 add header

--- a/week5/index.html
+++ b/week5/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <div id="container">
-        <h1>halo</h1>
+        <div id="header">
+            <h1>Header</h1>
+
+        </div>
     </div>
 
 </body>
