--- a/week5/index.html
+++ b/week5/index.html
@@ -11,9 +11,16 @@
 <body>
     <div id="container">
         <div id="header">
-            <h1>Header</h1>
-
+            <img src="images/logo.png" />
+            <h1>Lim Zhong Rui</h1>
         </div>
+
+        <div class="topnav">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+        </div>
+
     </div>
 
 </body>
