--- a/week5/index.html
+++ b/week5/index.html
@@ -15,14 +15,22 @@
             <h1>Lim Zhong Rui</h1>
         </div>
 
-        <div class="topnav">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+        <div class="try">
+            <div class="topnav">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+                <a href="#">Link 5</a>
+            </div>
+            <div class="topnav">
+                <a href="#">Home Page</a>
+            </div>
         </div>
-
     </div>
 
+
+    
 </body>
 
 </html>
