--- a/week5/index.html
+++ b/week5/index.html
@@ -27,10 +27,23 @@
                 <a href="#">Home Page</a>
             </div>
         </div>
+
+        <div class="row">
+            <div class="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
+            </div>
+            <div class="column" id="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
+            </div>
+            <div class="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
+            </div>
+        </div>
+
     </div>
-
-
-    
 </body>
 
 </html>
