--- a/week5/index.html
+++ b/week5/index.html
@@ -5,7 +5,7 @@
     <title>hi</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
-
+    <meta name="viewport" content="width=device-with, initial-scale=1.0">
 </head>
 
 <body>
@@ -33,10 +33,11 @@
                 <h2>Column</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
             </div>
-            <div class="column" id="column">
+            <div class="column" id="column1">
                 <h2>Column</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
             </div>
+            
             <div class="column">
                 <h2>Column</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
