--- a/week5/index.html
+++ b/week5/index.html
@@ -6,7 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="width=device-with, initial-scale=1.0">
-    
+
 </head>
 
 <body>
@@ -31,17 +31,35 @@
 
         <div class="row">
             <div class="column">
-                <h2>Column</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
+                <h2>Side</h2>
+                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit... </p>
             </div>
             <div class="column" id="column1">
-                <h2>Column</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
+                <h2>Main Content</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis velit nee neque ultricies, eget elementum magna tristique.
+                    Quisque vehicula, risus eget aliquam placerat, purus lea tincidunt eras, eget luctus quam orci in
+                    velit. Praesent scelerisque tartar sed accumsan convallis.</p>
             </div>
-            
+
             <div class="column">
-                <h2>Column</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. </p>
+                <h2>Side</h2>
+                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit... </p>
+            </div>
+        </div>
+
+        <div class="footerp">
+            <div class="footer">
+                Bye
+            </div>
+            <div class="footer">
+                Bye2
+            </div>
+            <div class="footer">
+                Bye3
+            </div>
+            <div class="footer">
+                Bye4
             </div>
         </div>
 
