add link at main index

--- a/index.html
+++ b/index.html
@@ -170,10 +170,8 @@
             <div class="container px-4 px-lg-5 text-center">
                 <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week2/">week2!</a>
                 <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week3/welcome.html">Week3!</a>
+                <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5">Week5!</a>
             </div>
-
-
-            
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
