--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Home Page</a>
+            <a  class="navbar-brand" id="transition" href="#page-top"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -35,8 +35,6 @@
                     <li class="nav-item"><a class="nav-link" href="#hobby">Hobby</a></li>
                     <li class="nav-item"><a class="nav-link" href="#mylove">My Love</a></li>
                     <li class="nav-item"><a class="nav-link" href="#homework">Homework</a></li>
-
-
                 </ul>
             </div>
         </div>
