--- a/week5/index.html
+++ b/week5/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>hi</title>
+    <title>week5</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="width=device-with, initial-scale=1.0">
