--- a/week5/homework/homework1.html
+++ b/week5/homework/homework1.html
@@ -3,14 +3,64 @@
 
 <head>
     <title>Homework1</title>
-    <link href="../css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="width=device-with, initial-scale=1.0">
 
 </head>
 
 <body>
-    
+    <div id="container">
+        <div class="header">
+            <img src="../images/logo.png">
+            <h1 class="phone">012-3456789 </h1>
+        </div>
+
+        <div class="topnav">
+            <a href="#1">FEat 1</a>
+            <a href="#2">FEat 2</a>
+            <a href="#3">FEat 3</a>
+            <a href="#4">FEat 4</a>
+        </div>
+
+        <div class="slideshow-container">
+            <img src="images/1.jpg" style="width:100%">
+            <div class="text">Picture </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <p>FEat 1</p>
+            </div>
+            <div class="column">
+                <p>FEat 2</p>
+            </div>
+            <div class="column">
+                <p>FEat 3</p>
+            </div>
+            <div class="column">
+                <p>FEat 4</p>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div id="box1">
+                <p>Text Content</p>
+            </div>
+            <div id="box2">
+                <p>Sidebar</p>
+            </div>
+        </div>
+
+        <div id="footer1">
+            <div class="footer">
+                <h1>Thank You!!!</h1>
+            </div>
+        </div>
+
+
+    </div>
 
 </body>
 
