add link at main page

--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week2/">week2!</a>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week3/welcome.html">Week3!</a>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5">Week5!</a>
+            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5/homework/homework1">Week5-Homework1!</a>
+            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5/homework/homework2">Week5-Homework2!</a>
+            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5/homework/homework3">Week5-Homework3!</a>
         </div>
     </section>
     <!-- Footer-->
