--- a/index.html
+++ b/index.html
@@ -180,10 +180,20 @@
         <div class="container px-4 px-lg-5 text-center">
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week2/">week2!</a>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week3/welcome.html">Week3!</a>
-            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5">Week5!</a>
-            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5/homework/homework1">Week5-Homework1!</a>
-            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5/homework/homework2">Week5-Homework2!</a>
-            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week5/homework/homework3">Week5-Homework3!</a>
+            <div class="dropdown">
+                <p class="btn btn-light btn-xl">Week5!</p>
+                <div class="dropdown-content">
+                    <u1>
+                        <li><a  href="https://limzhongrui.github.io/week5">Week 5</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week5/homework/homework1">Homework 1</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week5/homework/homework2">Homework 2</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week5/homework/homework3">Homework 3</a></li>
+                    </u1>
+                </div>
+            </div>
+
+
+            
         </div>
     </section>
     <!-- Footer-->
