--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                     
                     <hr class="divider divider-light" />
-                    <p class="text-white-75 mb-4">About Me</p>
+                    <p class="text-white-75 mb-4">Hover my picture to know my name</p>
                     <a class="btn btn-light btn-xl" href="#hobby">Go to my hobby</a>
                 </div>
             </div>
