change container name

--- a/week6/homework/layouta.html
+++ b/week6/homework/layouta.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="container-a">
         <div class="logo">LOGO</div>
         <div class="menu">MENU</div>
         <div class="slideshow">IMAGE SLIDESHOW</div>
