--- a/week6/homework/layoutb.html
+++ b/week6/homework/layoutb.html
@@ -2,11 +2,24 @@
 <html>
 
 <head>
-    <title>layout A</title>
+    <title>layout B</title>
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
-
+    <div class="container-b">
+        <div class="logo">LOGO</div>
+        <div class="phoneno">012-3456789</div>
+        <div class="menu">MENU</div>
+        <div class="slideshow">IMAGE SLIDESHOW</div>
+        <div class="feat1">feat1</div>
+        <div class="feat2">feat2</div>
+        <div class="feat3">feat3</div>
+        <div class="feat4">feat4</div>
+        <div class="text">TEXT CONTENT</div>
+        <div class="sidebar">SIDEBAR</div>
+        <div class="footer">FOOTER</div>
+    </div>
 </body>
 
 </html>
