--- a/week6/homework/layoutd.html
+++ b/week6/homework/layoutd.html
@@ -3,10 +3,20 @@
 
 <head>
     <title>layout D</title>
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
-
+    <div class="container-d">
+        <div class="blog">BLOG</div>
+        <div class="logo">LOGO</div>
+        <div class="phoneno">012-3456789</div>
+        <div class="menu">MENU</div>
+        <div class="slideshow">IMAGE SLIDESHOW</div>
+        <div class="text">TEXT CONTENT</div>
+        <div class="sidebar">SIDEBAR</div>
+        <div class="footer">FOOTER</div>
+    </div>   
 </body>
 
 </html>
