--- a/week6/homework/homework.html
+++ b/week6/homework/homework.html
@@ -10,13 +10,27 @@
     <div id="container">
         <div class="logo">LOGO</div>
         <div class="menu">MENU</div>
-        <div class="slideshow">IMAGE SLIDESHOW</div>
-        <div class="feat1">feat1</div>
-        <div class="feat2">feat2</div>
-        <div class="feat3">feat3</div>
         <div class="sidebar">SIDEBAR</div>
-        <div class="text">TEXT CONTENT</div>
-        <div class="footer">FOOTER</div>
+        <div class="smedia">SOCIAL MEDIA</div>
+        <div class="biography">BIOGRAPHY</div>
+        <div class="offer">OFFER</div>
+        <div class="services1">services1</div>
+        <div class="services2">services2</div>
+        <div class="services3">services3</div>
+        <div class="services4">services4</div>
+        <div class="services5">services5</div>
+        <div class="services6">services6</div>
+
+        <div class="pricing">PRICING</div>
+        <div class="goldpackage">goldpackage</div>
+        <div class="platinum">platinum</div>
+        <div class="silverpackage">silverpackage</div>
+        
+        <div class="news">news</div>
+        <div class="links">links</div>
+        <div class="hours">hours</div>
+        <div class="time">time</div>
+        <div class="contact">contact</div>
     </div>
 </body>
 
