add week6 link to main

--- a/index.html
+++ b/index.html
@@ -191,6 +191,19 @@
                     </u1>
                 </div>
             </div>
+            <div class="dropdown">
+                <p class="btn btn-light btn-xl">Week6!</p>
+                <div class="dropdown-content">
+                    <u1>
+                        <li><a  href="https://limzhongrui.github.io/week6">Week 6</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week6/homework/layouta">Layout A</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week6/homework/layoutb">Layout B</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week6/homework/layoutc">Layout C</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week6/homework/layoutd">Layout D</a></li>
+                        <li><a  href="https://limzhongrui.github.io/week6/homework/homework">Homework</a></li>
+                    </u1>
+                </div>
+            </div>
 
 
             
