--- a/week6/homework/homework.html
+++ b/week6/homework/homework.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>layout A</title>
+    <title>homework</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
