--- a/week6/homework/homework.html
+++ b/week6/homework/homework.html
@@ -10,10 +10,13 @@
     <div id="container">
         <div class="logo">LOGO</div>
         <div class="menu">MENU</div>
+
         <div class="sidebar">SIDEBAR</div>
         <div class="smedia">SOCIAL MEDIA</div>
+
         <div class="biography">BIOGRAPHY</div>
-        <div class="offer">OFFER</div>
+
+        <div class="offer">What we offer</div>
         <div class="services1">services1</div>
         <div class="services2">services2</div>
         <div class="services3">services3</div>
@@ -25,12 +28,14 @@
         <div class="goldpackage">goldpackage</div>
         <div class="platinum">platinum</div>
         <div class="silverpackage">silverpackage</div>
-        
+
+        <div class="bottom">logo</div>
         <div class="news">news</div>
         <div class="links">links</div>
         <div class="hours">hours</div>
         <div class="time">time</div>
         <div class="contact">contact</div>
+
     </div>
 </body>
 
