--- a/week6/homework/homework.html
+++ b/week6/homework/homework.html
@@ -8,7 +8,10 @@
 
 <body>
     <div id="container">
-        <div class="logo">LOGO</div>
+        <div class="logo">
+            <img src="../images/Group 1539@2x.png">
+            
+        </div>
         <div class="menu">MENU</div>
 
         <div class="sidebar">SIDEBAR</div>
