--- a/week6/homework/homework - Copy.html
+++ b/week6/homework/homework - Copy.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>homework</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png" />
     <link href="css/styles - Copy.css" rel="stylesheet" />
 </head>
 
@@ -193,7 +194,55 @@
             <img src="../images/dot.png">
 
         </div>
-        
+        <div>
+            <p id="news">Newsletter</p>
+            <p id="doyou">Do you want to get <b>Special News?</b></p>
+            <input type="email" id="myEmail" value="abc@example.com">
+            <a href="#" class="button">Subscribe</a>
+        </div>
+        <div id="footer">
+            <div class="footer_1">
+                <h1>logo.</h1>
+                <p id="footer_stay">Stay in touch</p>
+                <div id="footer_logo">
+                    <div class="footer_logo1">
+                        <img src="../images/asset-1@2x.png">
+                    </div>
+                    <div class="footer_logo1">
+                        <img src="../images/asset-2@2x.png">
+                    </div>
+                    <div class="footer_logo1">
+                        <img src="../images/asset-3@2x.png">
+                    </div>
+                    <div class="footer_logo1">
+                        <img src="../images/instagram-1@2x.png">
+                    </div>
+                </div>
+            </div>
+            <div class="footer_2">
+                <h1>Quick Links</h1>
+                <p>About</p>
+                <p>Home</p>
+                <p>Pricing</p>
+                <p>Location</p>
+                <p>Office</p>
+            </div>
+            <div class="footer_2">
+                <h1>Hours</h1>
+                <p>Monday: 8:00-18:00</p>
+                <p>Tuesday: 9:00-18:00</p>
+                <p>Wednesday: 9:00-18:00</p>
+                <p>Thursday: 9:00-18:00</p>
+                <p>Friday: 9.00-18.00</p>
+            </div>
+            <div class="footer_2">
+                <h1>Contact</h1>
+                <p><img class="logo-" src="../images/old-handphone@2x.png"> 000-000-0000</p>
+                <p><img class="logo-" src="../images/envelope@2x.png"> info@email.com</p>
+                <p><img class="logo-" src="../images/maps-and-flags@2x.png"> New York. US</p>
+            </div>
+
+        </div>
     </div>
 </body>
 
