--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </u1>
                 </div>
             </div>
-
+            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week7/">Week7!</a>
 
             
         </div>
