--- a/week8/index.html
+++ b/week8/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="form">
-        <form name="myForm" action="form_submit.html">
+        <form name="myForm">
             <fieldset>
                 <legend>Farmer Registration Form</legend>
                 Name<br>
@@ -300,11 +300,9 @@
                 </div>
                 <div id="submit">
                     <a href="https://limzhongrui.github.io/week8/thank_you" >
-                        <button class="button button1">Submit
-                        </button>
+                        <button class="button button1">Submit</button>
                     </a>
                 </div>
-                
             </fieldset>
         </form>
     </div>
