--- a/week8/index.html
+++ b/week8/index.html
@@ -19,7 +19,7 @@
                 <div class="box">
                     <div class="box2">
                         Email<br>
-                        <input type="text" name="email" placeholder="example@gmail.com" size="50">
+                        <input type="text" name="email" placeholder="example@gmail.com" size="50" required>
                     </div>
                     <div class="box2">
                         Phone<br>
@@ -299,7 +299,7 @@
                     </div>
                 </div>
                 <div id="submit">
-                    <a href="https://limzhongrui.github.io/week8/thank_you" >
+                    <a href="https://limzhongrui.github.io/week8/thank_you.html" >
                         <button class="button button1">Submit</button>
                     </a>
                 </div>
