--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 </div>
             </div>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week7/">Week7!</a>
+            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week8/">Week8!</a>
 
             
         </div>
