--- a/week8/index.html
+++ b/week8/index.html
@@ -300,7 +300,7 @@
                 </div>
                 <div id="submit">
                     <a href="https://limzhongrui.github.io/week8/thank_you.html" >
-                        <button class="button button1">Submit</button>
+                        <button>Submit</button>
                     </a>
                 </div>
             </fieldset>
