--- a/week8/index.html
+++ b/week8/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="form">
-        <form name="myForm">
+        <form name="myForm" action="form_submit.html">
             <fieldset>
                 <legend>Farmer Registration Form</legend>
                 Name<br>
