--- a/week8/index.html
+++ b/week8/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <div id="form">
-        <form name="myForm" action="form_submit.html">
+        <form name="myForm" action="thank_you.html">
             <fieldset>
                 <legend>Farmer Registration Form</legend>
                 Name<br>
-                <input type="text" name="firstname" placeholder="First"  size="50" required>
-                <input type="text" name="lastname" placeholder="Last"  size="50" required><br>
+                <input type="text" name="firstname" placeholder="First" size="50" required>
+                <input type="text" name="lastname" placeholder="Last" size="50" required><br>
                 <div class="box">
                     <div class="box2">
                         Email<br>
@@ -45,7 +45,7 @@
                         <input type="text" name="postal" placeholder="Postal/Zip Code" size="50">
                     </div>
                     <div class="box2">
-                        <select name="country" id="country" >
+                        <select name="country" id="country">
                             <option value="">-Plese select your country-</option>
                             <option value="Afghanistan">Afghanistan</option>
                             <option value="Åland Islands">Åland Islands</option>
@@ -282,7 +282,8 @@
                             <option value="United Arab Emirates">United Arab Emirates</option>
                             <option value="United Kingdom">United Kingdom</option>
                             <option value="United States">United States</option>
-                            <option value="United States Minor Outlying Islands">United States Minor Outlying Islands</option>
+                            <option value="United States Minor Outlying Islands">United States Minor Outlying Islands
+                            </option>
                             <option value="Uruguay">Uruguay</option>
                             <option value="Uzbekistan">Uzbekistan</option>
                             <option value="Vanuatu">Vanuatu</option>
@@ -298,11 +299,9 @@
                         </select>
                     </div>
                 </div>
-                <div id="submit">
-                    <a href="https://limzhongrui.github.io/week8/thank_you.html" >
-                        <button>Submit</button>
-                    </a>
-                </div>
+
+                <button>Submit</button>
+
             </fieldset>
         </form>
     </div>
