--- a/week8/index.html
+++ b/week8/index.html
@@ -299,9 +299,10 @@
                         </select>
                     </div>
                 </div>
+                <div id="submit">
+                    <button>Submit</button>
 
-                <button>Submit</button>
-
+                </div>
             </fieldset>
         </form>
     </div>
