until our doctor

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -20,8 +20,8 @@
 
         </div>
         <div id="menu_bar">
-            <div id="menu_about"><a href="#about">About</a></div>
-            <div id="menu_doctors"><a href="#doctors">Doctors</a></div>
+            <div id="menu_about"><a href="#about_us">About</a></div>
+            <div id="menu_doctors"><a href="#our_doctors">Doctors</a></div>
             <div id="menu_location"><a href="#location">Location</a></div>
             <div id="menu_signup"><a href="#signup">Sign Up</a></div>
             <div>
@@ -46,10 +46,54 @@
         </div>
     </div>
 
-
     <button id="back_to_top"></button>
-    <div id="about_us"></div>
-    <div id="our_doctors"></div>
+    <div id="about_us">
+        <div id="about_us_left">
+            <img src="images/bg_about.png">
+        </div>
+        <div>
+            <h1>We will services for </h1>
+            <h2>24/7</h2>
+            <p>Hour</p>
+            <div>
+                <p>Our clinics have been certified by the Board of Medicine Malaysia</p>
+            </div>
+        </div>
+
+    </div>
+    <div id="our_doctors">
+        <h1>Our Doctors</h1>
+        <div class="doctors">
+            <div class="doctors1">
+                <img src="images/doctor.png">
+                <h3>Dr.John</h3>
+                <button class="button">Create Appointment Now!</button>
+            </div>
+            <div class="doctors1">
+                <img src="images/doctor1.png">
+                <h3>Dr.David</h3>
+            </div>
+            <div class="doctors1">
+                <img src="images/doctor2.png">
+                <h3>Dr.Paul</h3>
+            </div>
+        </div>
+
+        <div class="doctors">
+            <div class="doctors1">
+                <img src="images/doctor3.png">
+                <h3>Dr.Lisa</h3>
+            </div>
+            <div class="doctors1">
+                <img src="images/doctor4.png">
+                <h3>Dr.Amy</h3>
+            </div>
+            <div class="doctors1">
+                <img src="images/doctor5.png">
+                <h3>Dr.Linda</h3>
+            </div>
+        </div>
+    </div>
     <div id="location"></div>
 
 
