--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
             </div>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week7/">Week7!</a>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week8/">Week8!</a>
+            <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/assignment/">Assignment!</a>
 
             
         </div>
