--- a/assignment/index.html
+++ b/assignment/index.html
@@ -65,36 +65,44 @@
         <h1>Our Doctors</h1>
         <div class="doctors">
             <div class="doctors1">
-                <img src="images/doctor.png">
+                <a href="dr_john.html"><img src="images/doctor.png"></a>
                 <h3>Dr.John</h3>
-                <button class="button">Create Appointment Now!</button>
+                <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
-                <img src="images/doctor1.png">
+                <a href="dr_john.html"><img src="images/doctor1.png"></a>
                 <h3>Dr.David</h3>
+                <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
-                <img src="images/doctor2.png">
+                <a href="dr_john.html"><img src="images/doctor2.png"></a>
                 <h3>Dr.Paul</h3>
+                <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
         </div>
 
         <div class="doctors">
             <div class="doctors1">
-                <img src="images/doctor3.png">
+                <a href="dr_john.html"><img src="images/doctor3.png"></a>
                 <h3>Dr.Lisa</h3>
+                <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
-                <img src="images/doctor4.png">
+                <a href="dr_john.html"><img src="images/doctor4.png"></a>
                 <h3>Dr.Amy</h3>
+                <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
             <div class="doctors1">
-                <img src="images/doctor5.png">
+                <a href="dr_john.html"><img src="images/doctor5.png"></a>
                 <h3>Dr.Linda</h3>
+                <a href="appointment.html" class="button">Create Appointment Now!</a>
             </div>
         </div>
     </div>
-    <div id="location"></div>
+    <div id="location">
+        <h1>Our Doctors</h1>
+
+    </div>
 
 
 </body>
