--- a/assignment/index.html
+++ b/assignment/index.html
@@ -100,7 +100,13 @@
         </div>
     </div>
     <div id="location">
-        <h1>Our Doctors</h1>
+
+        <div>
+            <h1>Our Clinics</h1>
+        </div>
+        <div>
+            <img src="images/location.png">
+        </div>
 
     </div>
 
