--- a/index.html
+++ b/index.html
@@ -207,6 +207,15 @@
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week7/">Week7!</a>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/week8/">Week8!</a>
             <a class="btn btn-light btn-xl" href="https://limzhongrui.github.io/assignment/">Assignment!</a>
+            <div class="dropdown">
+                <p class="btn btn-light btn-xl">Week9!</p>
+                <div class="dropdown-content">
+                    <u1>
+                        <li><a  href="week9/index.html">Exercise 1</a></li>
+                        <li><a  href="week9/exe2.html">Exercise 2</a></li>
+                    </u1>
+                </div>
+            </div>
 
             
         </div>
